homework/hw_4/instance/instance.tf
resource "aws_instance" "web" {
  ami           = var.ami
  instance_type = var.instance_type
  key_name      = var.key_name
  #subnet_id     = aws_subnet.public_subnet.id

  subnet_id = var.subnet_id
  vpc_security_group_ids      = [aws_security_group.allow_ssh_http.id]
  associate_public_ip_address = true 

  tags = {
    Name = "${var.prefix}-web_server"
  }
}
